@@ -12,4 +12,9 @@
       <app-hot-keys></app-hot-keys>
     </ng-template>
   </nz-tab>
+  <nz-tab nzTitle="Stats">
+    <ng-template nz-tab>
+      <app-stats></app-stats>
+    </ng-template>
+  </nz-tab>
 </nz-tabset>
