@@ -1,0 +1,3 @@
+app-stack-view {
+  max-width: 50rem;
+}
