@@ -1,0 +1,3 @@
+.total {
+  float: right;
+}
