@@ -1,0 +1,5 @@
+<nz-tabset nzTabPosition="top">
+  <nz-tab nzTitle="Ships speed">
+    <ng-template nz-tab> <app-speed-stats> </app-speed-stats> </ng-template>
+  </nz-tab>
+</nz-tabset>
